--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,80 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container m-0 p-0">
+  <div class="row mb-3 align-items-center">
+    <div class="col-md-4 offset-md-2">
+      <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">会員情報編集</h5>
+    </div>
   </div>
+</div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+  <%= form_with model: @customer, url: customer_registration_path,  local: true do |t| %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2">
+        <p>氏名</p>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :last_name, class: "w-100" %>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :first_name, class: "w-100" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+    <div class="row">
+      <div class="col-md-2">
+        <p>フリガナ</p>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :last_name_kana, class: "w-100" %>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :first_name_kana, class: "w-100" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <p>郵便番号</p>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :postal_code, class: "w-100" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <p>住所</p>
+      </div>
+      <div class="col-md-8">
+        <%= t.text_field :address, class: "w-100" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <p>電話番号</p>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :telephone_number, class: "w-100" %>
+      </div>
+    </div>
+
+    <div class="row mb-2">
+      <div class="col-md-2">
+        <p>メールアドレス</p>
+      </div>
+      <div class="col-md-3">
+        <%= t.text_field :email, class: "w-100" %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="offset-md-2 col-md-4">
+        <%= t.submit "編集内容変更を保存", class:"btn btn-success px-5 py-2 " %>
+      </div>
+      <% end %>
+      <div class="offset-md-2 col-md-2">
+        <%= link_to "退会する", unsubscribe_customers_path, class:"btn btn-danger px-4 py-2" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
