--- a/app/views/homes/_genres.html.erb
+++ b/app/views/homes/_genres.html.erb
@@ -1,4 +1,4 @@
-  <div class="search-genre mr-5">
+  <div class="search-genre col-md-2 p-0 w-100">
     <table class="table table-borderless">
       <thead class="text-center">
         <tr>
