--- a/app/assets/stylesheets/admin/genres.scss
+++ b/app/assets/stylesheets/admin/genres.scss
@@ -1,20 +1,18 @@
 // Place all the styles related to the admin/genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-thead{
-  background-color:whitesmoke;
-}
+
 
 .td{
   line-height:40px;
   padding:4px;
 }
 
-thead th{
+.admin-genre thead th{
   border-top:1px solid #dee2e6;
   border-bottom:1px solid #dee2e6;
 }
 
-tr:last-child td{
+.admin-genre tr:last-child td{
   border-bottom:1px solid #dee2e6;
 }
