--- a/app/assets/stylesheets/admin/homes.scss
+++ b/app/assets/stylesheets/admin/homes.scss
@@ -1,6 +1,6 @@
 // Place all the styles related to the admin/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-thead{
-  background-color:whitesmoke;
+.top-table tr:last-child td{
+  border-bottom:1px solid #dee2e6;
 }
