--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,20 +21,19 @@
   box-sizing:border-box;
 }
 
+thead{
+  background-color:whitesmoke;
+}
+
 .page-name{
   font-size:24px;
 }
-html, body{
-  height:100%;
-}
 
-header{
-  height:17%;
-}
 
-nav{
-  height:100%;
+.top-nav{
   border:1px solid black;
+  position:relative;
+  min-height:10vw;
 }
 
 body{
@@ -50,19 +49,23 @@ body{
 
 main{
   padding:30px;
-  height:85%;
+  min-height:40vw;
   border-left:1px solid black;
   border-right:1px solid black;
+  position:relative;
 }
 
 .nav-item{
   width:105px;
   padding:3px 0;
   border-radius:3px;
+}
+
+.nav-item-li{
   margin-right:20px;
 }
 
-.link-item .nav-item:last-child{
+.link-item .nav-item-li:last-child{
   margin-right:0;
 }
 
@@ -71,13 +74,18 @@ main{
   height:32px;
 }
 
+.customer-title{
+  position:absolute;
+  top:50%;
+  left:42%;
+}
+
 footer{
   height:80px;
   border:1px solid black;
 }
 
 .search-genre{
-  width:200px;
   height:400px;
   border:1px solid black;
 }
@@ -100,4 +108,13 @@ footer{
 
 .search-genre table tr:last-child td{
   border-bottom:0;
+}
+
+.pagination span{
+  margin:5px;
+}
+
+.admin-page{
+  position:absolute;
+  bottom:5px;
 }
