--- a/app/assets/stylesheets/cart_items.scss
+++ b/app/assets/stylesheets/cart_items.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the cart_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.cart_all_price{
+  width:288px;
+  height:48.5px;
+
+}
+
+.cart_items_table{
+  border-collapse:collapse;
+  margin-bottom:15px;
+}
+
+.cart_items_table tr{
+  height:48.5px;
+}
+
+.cart_items_table td, .cart_items_table th{
+  border:2px solid black;
+}
+
+.cart-item-amount{
+  width:60px;
+  height:30px;
+}
