--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -1,7 +1,8 @@
 // Place all the styles related to the customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.customer-deta table tr {
+.customer-deta table tr td,
+.customer-deta table tr th {
   border:2px solid black;
 }
 
@@ -12,4 +13,12 @@
 .my-page-text {
   display:flex;
   align-items:center;
+}
+
+.confirm{
+  margin-top:130px;
+}
+
+.confirm-method{
+  width:150px;
 }
