--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,13 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .about-img{
-    width:620px;
+    max-width:620px;
     height:350px;
 }
 
 
 .home-image{
-    width:600px;
+    max-width:600px;
     height:300px;
     background-image:url(98259D12-E622-4089-A500-9A65A3B6BE40.jpeg);
     background-size:cover;
