--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -1,39 +1,39 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
-    <div class="col-3 offset-md-2">
+    <div class="col-md-2 offset-md-1">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">配送先編集</h5>
     </div>
   </div>
 
-<div class="container">
+<div class="container mt-5 mr-md-2">
   <%= form_with model: @address, local: true do |t| %>
     <div class="row">
-      <div class="col-2">
-        <p>郵便番号</p>
+      <div class="col-md-2">
+        <p>郵便番号(ハイフンなし)</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :postal_code, class: "w-100" %>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-2">
+      <div class="col-md-2">
         <p>住所</p>
       </div>
-      <div class="col-8">
+      <div class="col-md-8">
         <%= t.text_field :address, class: "w-100" %>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-2">
+      <div class="col-md-2">
         <p>宛名</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :name, class: "w-100" %>
       </div>
-      <div class="ml-auto">
-        <%= t.submit "変更内容を保存", class: "btn btn-success px-3 py-2" %>
+      <div class="offset-md-5">
+        <%= t.submit "変更内容を保存", class: "btn btn-success px-3 py-1" %>
       </div>
     </div>
   <% end %>
