--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
-    <div class="col-5 offset-md-1">
+    <div class="col-md-5 offset-md-1">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;"><%= @customer.full_name %>さんの会員情報編集</h5>
     </div>
   </div>
 
   <%= form_with model: [:admin, @customer], local: true do |t| %>
-    <div class="row">
+    <div class="row mb-2">
       <div class="col-2 offset-md-1">
         <p>会員ID</p>
       </div>
@@ -15,82 +15,82 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>氏名</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :last_name, class: "w-100" %>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :first_name, class: "w-100" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>フリガナ</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :last_name_kana, class: "w-100" %>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :first_name_kana, class: "w-100" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>郵便番号</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :postal_code, class: "w-100" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>住所</p>
       </div>
-      <div class="col-8">
+      <div class="col-md-8">
         <%= t.text_field :address, class: "w-100" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>電話番号</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :telephone_number, class: "w-100" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>メールアドレス</p>
       </div>
-      <div class="col-3">
+      <div class="col-md-3">
         <%= t.text_field :email, class: "w-100" %>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-2 offset-md-1">
+    <div class="row mb-2">
+      <div class="col-md-2 offset-md-1">
         <p>会員ステータス</p>
       </div>
       <div>
         <%= t.radio_button :is_deleted, "false" %>
           <%= t.label :is_deleted, "有効" %>
       </div>
-      <div class="mx-3">
+      <div class="mx-md-3">
         <%= t.radio_button :is_deleted, "true" %>
           <%= t.label :is_deleted, "退会" %>
       </div>
     </div>
 
     <div class="row">
-      <div class="offset-3">
+      <div class="offset-md-3">
         <%= t.submit "変更を保存", class:"btn btn-success px-4 py-2" %>
       </div>
     </div>
