--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
-    <div class="col-3 offset-md-2">
+    <div class="col-md-3 offset-md-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">会員一覧</h5>
     </div>
   </div>
@@ -8,8 +8,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-10 offset-1">
-      <table class="table">
+    <div class="col-md-10 offset-1">
+      <table class="table customer-table">
         <thead>
           <tr>
             <th class="th">会員ID</th>
@@ -40,6 +40,8 @@
     </div>
   </div>
   <div class="d-flex justify-content-center">
-   <%= paginate @customers %>
+    <div class="admin-page">
+     <%= paginate @customers %>
+    </div>
   </div>
 </div>
