--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,78 +1,78 @@
 <div class="container m-0 p-0">
-  <div class="row mb-3 align-items-center">
-    <div class="col-4 offset-md-1">
+  <div class="row mb-5 align-items-center">
+    <div class="col-ma-4 offset-md-1">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;"><%= @customer.full_name %>さんの会員詳細</h5>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>会員ID</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.id %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>氏名</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.last_name %>　<%= @customer.first_name %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>フリガナ</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.last_name_kana %>　<%= @customer.first_name_kana %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>郵便番号</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.postal_code %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>住所</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.address %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>電話番号</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.telephone_number %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>メールアドレス</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <%= @customer.email %>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-2 offset-md-1">
+    <div class="col-md-2 offset-md-1">
       <p>会員ステータス</p>
     </div>
-    <div class="col-9">
+    <div class="col-md-9">
       <% if @customer.is_deleted == false %>
         <p class="text-success">有効</p>
       <% else %>
@@ -82,7 +82,7 @@
   </div>
 
   <div class="row">
-    <div class="offset-3">
+    <div class="offset-md-3">
       <%= link_to "編集する", edit_admin_customer_path(@customer), class:"btn btn-success px-4 py-2" %>
     </div>
     <div class="offset-1">
