--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="container m-0 p-0">
   <div class="row mb-5 align-items-center">
-    <div class="col-3 offset-md-1">
+    <div class="col-md-3 offset-md-1">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">ジャンル編集</h5>
     </div>
   </div>
 
    <div class="row mb-4">
-      <div class="col-2 ml-md-5">
+      <div class="col-md-2 ml-md-5">
           <p >ジャンル名</p>
       </div>
       <%= form_with model: [:admin, @genre], local: true do |t| %>
