--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container m-0 p-0">
   <div class="row mb-5 align-items-center">
-    <div class="col-3 offset-md-1">
+    <div class="col-md-3 offset-md-1">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">ジャンル一覧･追加</h5>
     </div>
   </div>
 
      <div class="row mb-md-4">
-        <div class="col-2 ml-md-5">
+        <div class="col-md-2 ml-md-5">
             <p >ジャンル名</p>
         </div>
         <%= form_with model: [:admin,@new_genre], local: true do |t| %>
@@ -16,8 +16,8 @@
     </div>
 
     <div class="row">
-        <div class="col-4">
-            <table class="table ml-md-5">
+        <div class="col-md-4">
+            <table class="admin-genre table ml-md-5">
                 <thead>
                     <tr>
                         <th>　　ジャンル</th>
