--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,13 +1,15 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
-    <div class="col-3 offset-md-2">
+    <div class="col-md-3 offset-md-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文履歴一覧</h5>
     </div>
   </div>
+</div>
 
+<div class="container">
   <div class="row">
-    <div class="col-10 offset-md-2">
-      <table class="table">
+    <div class="col-md-10 mx-auto">
+      <table class="top-table table">
         <thead>
           <tr>
             <th>購入日時</th>
@@ -20,12 +22,12 @@
           <% @orders.each do |t| %>
             <tr>
               <td>
-                <%= link_to admin_order_path do %>
-                  <%= l t.created_at %>
+                <%= link_to admin_order_path(t) do %>
+                  <%= t.created_at.strftime("%Y/%m/%d %H:%M:%S") %>
                 <% end %>
               </td>
-              <td><%= t.customer.full_name %></td>
-              <td><%= t.customer.id.cart_items.id.amount %></td>
+              <td><%= t.name %></td>
+              <td><%= t.order_details.all.sum(:amount) %></td>
               <td><%= t.order_status %></td>
             </tr>
           <% end %>
@@ -34,6 +36,8 @@
     </div>
   </div>
   <div class="d-flex justify-content-center">
-    <%= paginate @orders %>
+    <div class="admin-page">
+      <%= paginate @orders %>
+    </div>
   </div>
 </div>
