--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container m-0 p-0">
       <div class="row mb-5 align-items-center">
-        <div class="col-2 offset-md-2">
+        <div class="col-md-2 offset-md-2">
           <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">商品詳細</h5>
         </div>
     </div>
@@ -8,49 +8,49 @@
 
 <div class="container">
     <div class="row">
-        <div class="image col-4">
+        <div class="image col-md-4">
             <%= attachment_image_tag @item, :image, size:"300x200",format:'jpg' %>
         </div>
 
-        <div class="col-7">
+        <div class="col-md-7">
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <p>商品名</p>
                 </div>
-                <div class="col-8 item-deta">
+                <div class="col-md-8 item-deta">
                     <p><%= @item.name %></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <p>商品説明</p>
                 </div>
-                <div class="col-8 item-deta">
+                <div class="col-md-8 item-deta">
                     <p><%= @item.introduction %></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <p>ジャンル</p>
                 </div>
-                <div class="col-8 item-deta">
+                <div class="col-md-8 item-deta">
                     <p><%= @item.genre.name %></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <p>税込価格<br>
                     (税抜価格）</p>
                 </div>
-            <div class="col-8 item-deta">
-                    <p><%= @item.with_tax_price %>(<%= @item.price %>)円</p>
+            <div class="col-md-8 item-deta">
+                    <p><%= @item.with_tax_price.to_s(:delimited) %>(<%= @item.price.to_s(:delimited) %>)円</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <p>販売ステータス</p>
                 </div>
-                <div class="col-8 item-deta">
+                <div class="col-md-8 item-deta">
                     <% if @item.is_active == true %>
                         <p class="text-success item-deta">販売中</p>
                     <% else %>
