--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container m-0 p-0">
   <div class="row mb-3 align-items-center">
-    <div class="col-3 offset-md-2">
+    <div class="col-md-3 offset-md-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文履歴詳細</h5>
     </div>
   </div>
@@ -8,67 +8,57 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-2">
+    <div class="col-md-2">
       <p>購入者</p>
     </div>
-    <div class="col-2">
-      <%= redirect_to admin_customer_path(@order.customer) do %>
-        <%= @order.customer.last_name+@order.customer.first_name %>
-      <% end %>
-    </div>
+    <%= link_to admin_customer_path(@order.customer) do %>
+      <%= @order.customer.last_name+@order.customer.first_name %>
+    <% end %>
   </div>
 
   <div class="row">
-    <div class="col-2">
+    <div class="col-md-2">
       <p>注文日</p>
     </div>
-    <div class="col-2">
-      <%= l @order.created_at, format: :short %>
-    </div>
+    <%= @order.created_at.strftime("%Y/%m/%d/") %>
   </div>
 
   <div class="row">
-    <div class="col-2">
+    <div class="col-md-2">
       <p>配送先</p>
     </div>
-    <div class="col-8">
-      <p>〒<%= @order.postal_code %> <%= @order.address %><br>
-      <%= @order.name %>
-    </div>
+    <p>〒<%= @order.postal_code %> <%= @order.address %><br>
+    <%= @order.name %>
   </div>
 
   <div class="row">
-    <div class="col-2">
+    <div class="col-md-2">
       <p>支払方法</p>
     </div>
-    <div class="col-2">
-      <%= @order.payment_method %>
-    </div>
+    <%= @order.payment_method_i18n %>
   </div>
 
   <div class="row">
-    <div class="col-2">
+    <div class="col-md-2">
       <p>注文ステータス</p>
     </div>
-    <div class="col-1">
-      <%= form_with model: [:admin, @order], local: true do |t| %>
-        <%= t.select :order_status, Order.order_statuses.keys %>
-        <%= t.submit "更新", class: "btn btn-success px-2 py-2 ml-3" %>
-      <% end %>
-    </div>
+    <%= form_with model: [:admin, @order], local: true do |t| %>
+      <%= t.select :order_status, [["入金待ち", 0], ["入金確認", 1], ["制作中", 2], ["発送準備中", 3], ["発送済み", 4]], {}, {class: "status-select"} %>
+      <%= t.submit "更新", class: "btn btn-success px-2 py-2 ml-md-3" %>
+    <% end %>
   </div>
 
-  <div class="row">
-    <div class="col-6">
-      <table class="table">
+  <div class="row mt-4">
+    <div class="col-md-7">
+      <table class="order-table table table-borderless">
         <thead>
           <tr>
-            <td>商品名</td>
-            <td>単価(税込)</td>
-            <td>数値</td>
-            <td>小計</td>
-            <td>制作ステータス</td>
-            <td></td>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数値</th>
+            <th>小計</th>
+            <th>制作ステータス</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -76,42 +66,37 @@
           <tr>
             <td><%= t.item.name %></td>
             <td><%= t.price %></td>
+            <td><%= t.amount %></td>
             <td><%= t.price*t.amount %></td>
-            <td><%= t.making_status %></td>
-            <td><%= link_to "更新", admin_order_detail_update_path(t.id), method: :patch %></td>
+            <td>
+              <%= form_with model: [:admin, t], url: admin_order_path,  local: true do |make| %>
+                <%= make.select :making_status, [["制作不可", 0], ["制作待ち", 1], ["制作中", 2], ["制作完了", 3]], {}, {class: "status-select"} %>
+            </td>
+            <td>
+                <%= make.submit "更新", class: "btn btn-success px-2 py-2"%>
+              <% end %>
+            </td>
           </tr>
           <% end %>
         </tbody>
       </table>
     </div>
 
-    <div class="col-4 d-flex align-items-end">
-      <div class="row">
-        <div class="col-6">
-          <p>商品合計</p>
-        </div>
-        <div class="col-6">
-          <p><%= @order.total_payment-@order.postage %>円</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-6">
-          <p>送料</p>
-        </div>
-        <div class="col-6">
-          <p><%= @order.shipping_cost %>円</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-6">
-          <p>請求金額</p>
-        </div>
-        <div class="col-6">
-          <p><%= @order.total_payment %>円</p>
-        </div>
-      </div>
+    <div class="col-md-3 ml-md-auto payment">
+      <table class="payment-table w-100">
+        <tr>
+          <th>商品合計</th>
+          <td class="text-right"><%= @order.total_payment-@order.shipping_cost %>円</td>
+        </tr>
+        <tr>
+          <th>送料</th>
+          <td class="text-right"><%= @order.shipping_cost %>円</td>
+        </tr>
+        <tr>
+          <th>請求金額</th>
+          <td class="text-right"><strong><%= @order.total_payment %>円</strong></td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
