--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,7 +3,7 @@
 
   <div class="home pl-5">
       <div class="home-image d-flex justify-content-center">
-          <div class="top-text my-auto py-3 pl-3">
+          <div class="top-text my-auto py-3 pl-md-3">
             <p>ようこそ、ながのケーキへ！<br>
             このサイトは、ケーキ販売のECサイトになります。<br>
             会員でない人も商品の閲覧はできますが、<br>
@@ -20,11 +20,11 @@
       <% @items.each do |t| %>
         <%= link_to item_path(t), class:"top-item-image" do %>
         <%= attachment_image_tag t, :image, size:"220x180", format:'jpeg' %>
-        <div class="top-item-name">
+        <div class="top-item-name mt-2">
           <%= t.name %>
         </div>
-        <div class="top-item-price">
-          ¥<%= t.with_tax_price %>
+        <div class="top-item-price mt-2">
+          ¥<%= t.with_tax_price.to_s(:delimited) %>
         </div>
         <% end %>
       <% end %>
