--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,10 @@
 <div class="d-flex ml-5">
   <%= render 'homes/genres', genres: @genres %>
 
-  <div class="item-index">
-    <div class="item-index-text mb-4">
+  <div class="item-index ml-5">
+    <div class="item-index-text mb-3">
       <h3 class="d-inline">商品一覧</h3>
-      <h4 class="d-inline">（全<%= @items.count %>件）</h4>
+      <h4 class="d-inline">（全<%= @items_count.count %>件）</h4>
      </div>
     <div class="d-flex flex-wrap">
       <% @items.each do |t| %>
@@ -15,14 +15,14 @@
           <%= t.name %>
         </div>
         <div class="index-item-price mt-2">
-          ¥<%= t.with_tax_price %>
+          ¥<%= t.with_tax_price.to_s(:delimited) %>
         </div>
       </div>
       <% end %>
       <% end %>
       </div>
-    <div class="item-index-paginate justify-content-center">
-      <%= paginate @items %>
-    </div>
   </div>
 </div>
+<div class="item-page">
+  <%= paginate @items %>
+ </div>
