--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,57 +13,72 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="top-nav navbar navbar-expand-lg navbar-light">
         <div class="container-fluid d-flex">
           <div class="my-auto">
             <h1>
-              <%= link_to "LOGO", items_path, class:"navbar-brand nav-logo " %>
+              <%= link_to "LOGO", root_path, class:"navbar-brand nav-logo" %>
             </h1>
           </div>
+          <div class="customer-title">
           <% if customer_signed_in? %>
-            <p>ようこそ、<%= current_customer.last_name %>さん</p>
+              <p>ようこそ、<%= current_customer.last_name %>さん</p>
           <% end %>
-            <div class="navbar-nav navbar-right flex-column">
-              <div class="link-item">
+          </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-column" id="navbarNavDropdown">
+              <ul class="link-item navbar-nav ml-auto">
               <% if customer_signed_in? %>
-
+                <li class="nav-item-li">
                   <%= link_to "マイページ", my_page_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "商品一覧", items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "カート", cart_items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to"ログアウト", destroy_customer_session_path,  method: :delete, class:"btn btn-outline-secondary nav-item text-dark"; %>
-                  
+                </li>
               <% elsif admin_signed_in? %>
-              
+                <li class="nav-item-li">
                   <%= link_to "商品一覧", admin_items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "会員一覧", admin_customers_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "注文履歴一覧", admin_root_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "ジャンル一覧", admin_genres_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
               <% else %>
-
+                <li class="nav-item-li">
                   <%= link_to "About", about_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "商品一覧", items_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to "新規登録", new_customer_registration_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
+                <li class="nav-item-li">
                   <%= link_to"ログイン", new_customer_session_path, class:"btn btn-outline-secondary nav-item text-dark"; %>
-
+                </li>
               <% end %>
-              </div>
-              <div class="navbar-nav serch justify-content-end mt-3">
+              </ul>
+              <div class="navbar-nav serch ml-auto mt-3">
                 <button class="serch-button" type="button"></button>
               </div>
             </div>
-        </div>
+
       </nav>
 
     </header>
