--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -1,15 +1,15 @@
 <div class="container m-0 p-0">
-  <div class="row mb-4 align-items-center">
-    <div class="col-3 offset-2">
+  <div class="row mb-2 align-items-center">
+    <div class="col-md-3 offset-md-2">
       <h5 class="page-name text-center m-0" style="background-color:whitesmoke;">注文情報確認</h5>
     </div>
   </div>
 </div>
 
 <div class="container">
-  <%= form_wih model: @order, local: true do |f| %>
+  <%= form_with model: @order, local: true do |f| %>
   <div class="row">
-    <table class="cart_item table col-8">
+    <table class="confirm_table col-md-8 mb-5">
       <thead>
         <tr>
           <th>商品名</th>
@@ -21,45 +21,41 @@
       <tbody>
       <% @cart_items.each do |t| %>
         <tr>
-          <td><%= attachment_image_tag t.item_id, :image,  size:"50x50", format:'jpeg' %> <%= t.item.name %></td>
-          <td><%= t.item.with_tax_price %></td>
+          <td><%= attachment_image_tag t.item, :image,  size:"70x40", class:"m-1" %>　<%= t.item.name %></td>
+          <td><%= t.item.with_tax_price.to_s(:delimited) %></td>
           <td><%= t.amount %></td>
-          <td><%= t.subtotal %></td>
+          <td><%= t.subtotal.to_s(:delimited) %></td>
           <% @cart_item_total += t.subtotal %>
         </tr>
         <% end %>
       </tbody>
     </table>
-    <table class="table col-4">
+    <table class="confirm_table col-md-3 ml-md-5 mb-5">
       <tr>
         <th>送料</th>
-        <td>800</td>
+        <td><%= @order_shipping_cost.to_s(:delimited) %></td>
       </tr>
       <tr>
         <th>商品合計</th>
-        <td><%= @cart_item_total %></td>
+        <td><%= @cart_item_total.to_s(:delimited) %></td>
       </tr>
       <tr>
         <th>請求金額</th>
-        <td><%= @cart_item_total + 800 %></td>
+        <td><%= (@cart_item_total + @order_shipping_cost).to_s(:delimited) %></td>
       </tr>
     </table>
   </div>
 
-  <div class="payment_method row">
-    <div class="col-1">
-      <h5><strong>支払方法</strong></h5>
-    </div>
-    <div class="col-11">
-      <p><%= @order.payment_methods_18n %></p>
-      <%= f.hiddeen_field :payment_method, value: @order.payment_method %>
+  <div class="row mb-4">
+    <h5><strong>支払方法</strong></h5>
+    <div class="ml-3">
+      <p><%= @order.payment_method_i18n %></p>
+      <%= f.hidden_field :payment_method, value: @order.payment_method %>
     </div>
   </div>
-  <div class="row">
-    <div class="col-1">
-      <h5><strong>お届け先</strong></h5>
-    </div>
-    <div class="col-11">
+  <div class="row mb-4">
+    <h5><strong>お届け先</strong></h5>
+    <div class="ml-3">
       <p>〒<%= @order.postal_code %> <%= @order.address %><br>
       <%= @order.name %></p>
       <%= f.hidden_field :postal_code, value: @order.postal_code %>
