[Finish]実装報告済

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -29,9 +29,9 @@
             </td>
             <td><%= t.email %></td>
             <% if t.is_deleted == false %>
-              <td>有効</td>
+              <td class="text-success">有効</td>
             <% else %>
-              <td>退会</td>
+              <td class="text-secondary">退会</td>
             <% end %>
           </tr>
           <% end %>
