--- a/app/views/customers/unsubscribe.html.erb
+++ b/app/views/customers/unsubscribe.html.erb
@@ -8,6 +8,6 @@
       </h5>
     </div>
     <%= link_to "退会しない", my_page_path, class:"confirm-method btn btn-primary px-4 py-1 mr-3" %>
-    <%= link_to "退会する",withdraw_customers_path, class:"confirm-method btn btn-danger px-4 py-1", method: :patch %>
+    <%= link_to "退会する",withdraw_customers_path, class:"confirm-method btn btn-danger px-4 py-1", method: :patch, "data-confirm" => "本当に退会しますか？" %>
   </div>
 </div>
