[Add]ジャンル検索欄スクロール機能追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,6 +94,12 @@ footer{
   position:relative;
 }
 
+.search-genre table tbody{
+  overflow-y:scroll;
+  height:376px;
+  display:block;
+}
+
 .search-genre table thead{
   border-top:0;
 }
