--- a/app/views/homes/_genres.html.erb
+++ b/app/views/homes/_genres.html.erb
@@ -2,7 +2,7 @@
     <table class="table table-borderless">
       <thead class="text-center">
         <tr>
-          <th>ジャンル検索</th>
+          <th class="fixed">ジャンル検索</th>
         </tr>
       </thead>
       <tbody>
